--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,92 @@
-h2 {
-    text-align: center;
+.body {
+    background-color: #fafafa;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.header {
+    width: 100%;
+    color: black;
+    display: inline-block;
+    height: 76px;
+}
+
+.header h2 {
+    left: 93px;
+    font-size: 41px;
+    position: absolute;
+    top: 6px;
+    color: #17BC65;
+    font-family: 'Alfa Slab One', cursive;
+    width: 320px;
+}
+
+.header .slogan {
+    position: absolute;
+    top: 168px;
+    left: 94px;
+    font-family: 'Open Sans', sans-serif;
+    width: 274px;
+}
+
+.header .menu {
+    float: right;
+    font-family: 'Open Sans', sans-serif;
+    margin-right: 66px;
+    margin-top: 25px;
+}
+
+.header .menu .item {
+    margin-left: 33px;
 }
 
 .pixel:hover {
 	fill: rgb(116, 242, 247) !important;
+}
+
+.oz-container {
+    width: 100%;
+    display: inline-block;
+    position: relative;
+}
+
+.about {
+    background-color: #48C1ED;
+    margin-top: 70px;
+    height: 366px;
+    padding-top: 40px;
+    color: white;
+}
+
+.about-item i {
+    font-size: 70px;
+    display: block;
+    margin-bottom: 15px;
+}
+
+.about .description {
+    display: block;
+    margin: auto;
+    margin-top: 10px;
+    width: 613px;
+    text-align: center;
+    font-size: 17px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.centered {
+    text-align: center;
+}
+
+.about .about-item {
+    display: inline-block;
+    width: 218px;
+    text-align: center;
+    font-size: 14px;
+    margin-left: 15px;
+    height: 190px;
+    margin-right: 15px;
+    font-family: 'Open Sans', sans-serif;
+    margin-top: 50px;
 }
 
 #window {
